db clean up
